fix: properly manage CORS for non-contextualized request